fixed intro slider img height on mobile; removed 10px margin-bottom on mobile version map.

--- a/css/style.css
+++ b/css/style.css
@@ -2033,7 +2033,7 @@ input.hint {
 		margin: 40px 0 20px 0;
 	}
 	#map_canvas {
-		margin-bottom: 10px;
+		/*margin-bottom: 10px;*/
 	}
 	.recipes a .inner {
 		padding: 0 30px;
